[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra"
version = "0.1.0"
description = "A package for modelling digital twins using Bayesian networks"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["unittest_*.py"]
addopts = "--import-mode=importlib"
pythonpath = ["src"]
